tdf#144752: UNDO/REDO: make sure to select the replaced content

In the specific case of the bug, the non-empty selection means that
the spell check won't skip the word with the cursor. But this also
establishes consistency with other Undo/Redo cases, which generally
select the text.

Change-Id: Ib7c1c911908dc59947e610d735907be7a363ca87
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168423
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 31f46cec1406bb39453f5d909da1321980b0e405)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168432
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>